# qterm

./: Cargo.toml  LICENCE  README.md
qterm_modules/: Cargo.toml
qterm_modules/src/: ascii_art.rs  date.rs  lib.rs  sys_info.rs
src/: main.rs
