[package]
name = "qterm"
version = "0.1.0"
edition = "2021"

[lib]
name = "qterm_modules"
path = "qterm_modules/src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
rand = "0.8.4"
colored = "2.0.0"
chrono = "0.4.19"
sysinfo = "0.7.0"
